examples/errors/8_parse_float/layout.tml
#use <definitions.tmd>

<Window smooth=float64/>